--- a/item.html
+++ b/item.html
@@ -6,8 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="css/file.css" />
 	</head>
 	<body>
-		<div class="itemVisualizerContainer">
-			<div class="itemTitle">
+		<div class="mainContainer">
+			<div class="title">
 				<div class="titleDiv">
 					<p class="titleParagraph">POI or Activity Title</p>
 				</div>
@@ -15,7 +15,7 @@
 					<i class="fas fa-chevron-up" onclick="expand(this)"></i>
 				</div>
 			</div>
-			<div class="itemInfoContainer">
+			<div class="infoContainer">
 				<div class="itemInfo" id="itemInformation">
 					<div class="infoTitle" id="informationTitle">
 						<p class="infoTitleParagraph"><i class="fas fa-info-circle"></i>Informations</p>
