Basic architecture with connected functions of components

--- a/ComponentStructure/index.html
+++ b/ComponentStructure/index.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
+<interactive-map></interactive-map>
+<categories-choice></categories-choice>
+<item-visualizer></item-visualizer>
+<search-items></search-items>
 
+
+<script src="InteractiveMap.js"></script>
+<script src="CategoriesChoice.js"></script>
+<script src="ItemVisualizer.js"></script>
+<script src="Search.js"></script>
+
+<script src="ActivityPOI.js"></script>
 </body>
 </html>
