item connected to json

--- a/ScratchComponents/categories.html
+++ b/ScratchComponents/categories.html
@@ -8,12 +8,102 @@
 	<body>
 		<div class="categoriesContainer">
 			<div class="innerContainer">
-				<a href="#" class="category"><i class="fas fa-landmark fa-lg"></i></a>
-				<a href="#" class="category"><i class="fas fa-spa fa-lg"></i></a>
-				<a href="#" class="category"><i class="fas fa-utensils fa-lg"></i></a>
-				<a href="#" class="category"><i class="fas fa-sun fa-lg"></i></a>
-				<a href="#" class="category"><i class="far fa-snowflake fa-lg"></i></a>
-				<a href="#" class="category"><i class="fas fa-grip-horizontal fa-lg"></i></a>
+				<div class="dropdownCategory">
+					<div class="category">
+						<img 
+							class="categoryImage" 
+							src="/img/category_icons/Kultur Sehenswuerdigkeiten.svg" 
+							alt="Kultur"
+						>
+					</div>
+					<div class="subCategory" id="subCategoryKultur">
+						<p>Culture and Attractions</p>
+						<input type="checkbox" id="museums" name="museums" value="museums">
+						<label for="museums">Museums</label><br>
+						<input type="checkbox" id="nature_park" name="nature_park" value="nature_park">
+						<label for="nature_park">Nature Park Visitor's Centres</label><br>
+						<input type="checkbox" id="churches" name="churches" value="churches">
+						<label for="churches">Churches and Monasteries</label><br>
+						<input type="checkbox" id="architecture" name="architecture" value="architecture">
+						<label for="architecture">Architecture</label><br>
+						<input type="checkbox" id="mines" name="mines" value="mines">
+						<label for="mines">Mines</label><br>
+						<input type="checkbox" id="places_to_see" name="places_to_see" value="places_to_see">
+						<label for="places_to_see">Places to see</label><br>
+						<input type="checkbox" id="forts" name="forts" value="forts">
+						<label for="forts">Forts and Castles</label><br>
+					</div>
+				</div>
+				<div class="dropdownCategory">
+					<div class="category">
+						<img 
+							class="categoryImage" 
+							src="/img/category_icons/Wellness Entspannung.svg" 
+							alt="Entspannung"
+						>
+					</div>
+					<div class="subCategory" id="subCategoryEntspannung">hei</div>
+				</div>
+				<div class="dropdownCategory">
+					<div class="category">
+						<img 
+							class="categoryImage" 
+							src="/img/category_icons/Essen Trinken.svg" 
+							alt="Essen"
+						>
+					</div>
+					<div class="subCategory" id="subCategoryEssen">hei</div>
+				</div>
+				<div class="dropdownCategory">
+					<div class="category">
+						<img 
+							class="categoryImage" 
+							src="/img/category_icons/Geschaefte und Dienstleister.svg" 
+							alt="Geschaefte"
+						>
+					</div>
+					<div class="subCategory" id="subCategoryGeschaefte">hei</div>
+				</div>
+				<div class="dropdownCategory">
+					<div class="category">
+						<img 
+							class="categoryImage" 
+							src="/img/category_icons/Mobilitaet.svg" 
+							alt="Mobilitaet"
+						>
+					</div>
+					<div class="subCategory" id="subCategoryMonilitaet">hei</div>
+				</div>
+				<div class="dropdownCategory">
+					<div class="category">
+						<img 
+							class="categoryImage" 
+							src="/img/category_icons/Sommer.svg" 
+							alt="Sommer"
+						>
+					</div>
+					<div class="subCategory" id="subCategorySommer">hei</div>
+				</div>
+				<div class="dropdownCategory">
+					<div class="category">
+						<img 
+							class="categoryImage" 
+							src="/img/category_icons/Winter.svg" 
+							alt="Winter"
+						>
+					</div>
+					<div class="subCategory" id="subCategoryWinter">hei</div>
+				</div>
+				<div class="dropdownCategory">
+					<div class="category">
+						<img 
+							class="categoryImage" 
+							src="/img/category_icons/Anderes.svg" 
+							alt="Anderes"
+						>
+					</div>
+					<div class="subCategory" id="subCategoryAnderes">hei</div>
+				</div>
 			</div>
 		</div>
 	</body>
