--- a/ScratchComponents/item.html
+++ b/ScratchComponents/item.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="mainContainer">
 			<div class="title">
-				<div class="titleDiv">
+				<div class="titleDiv" id="Title">
 					<p class="titleParagraph">POI or Activity Title</p>
 				</div>
 				<div class="titleArrowDiv">
@@ -23,22 +23,21 @@
 					<div class="info" id="information">
 						<div class="informationInstance">
 							<p class="text"><b>Categoria</b><br>
-							Mountain bike<br>
-							piste e circuiti sciistici</p>
+							<span id="category"></span></p>
 						</div>
 						<div class="informationInstance">
 							<p class="text"><b>Età adatta</b><br>
-							dagli 8 anni ai 99 anni</p>
+							<span id="ageFrom"></span>-<span id="ageTo"></span></p>
 						</div>
 						<div class="informationInstance">
 							<p class="text"><b>Dislivello e altitudine</b><br>
-							Dislivello totale: 2000 m<br>
-							Punto più basso: 1000 m<br>
-							Punto più alto: 3000 m</p>
+							Dislivello totale: <span id="altitudeDifference"></span> m<br>
+							Punto più basso: <span id="altitudeLowestPoint"></span> m<br>
+							Punto più alto: <span id="altitudeHighestPoint"></span> m</p>
 						</div>
 						<div class="informationInstance">
 							<p class="text"><b>Località</b><br>
-							<span>Ski area Val Comelico</span></p>
+							<span id="location"></span></p>
 						</div>
 					</div>
 				</div>
@@ -47,7 +46,7 @@
 						<p class="infoTitleParagraph"><i class="fas fa-file-alt"></i>Description</p>
 					</div>
 					<div class="info" id="description">
-						<p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br><b>Read more...</b></p>
+						<p class="text"></p>
 					</div>
 				</div>
 				<div class="itemInfo" id="itemPhotos">
@@ -64,10 +63,10 @@
 						<p class="infoTitleParagraph"><i class="fas fa-id-card"></i>Contacts</p>
 					</div>
 					<div class="info" id="contacts">
-						<p class="text"><b>Val d'Ega Turismo</b><br>
-						Stadtplatz 3, Welschnofen, Switzerland</p>
-						<p class="text"><i class="fas fa-envelope"></i>traubesterzing@gmail.com<br>
-						<i class="fas fa-phone-alt"></i>+39 0471 93315</p>
+						<p class="text"><b><span id="companyName"></span></b><br>
+						<span id="address"></span>, <span id="city"></span>, <span id="country"></span></p>
+						<p class="text"><i class="fas fa-envelope"></i><span id="email"></span><br>
+						<i class="fas fa-phone-alt"></i><span id="phoneNumber"></span></p>
 					</div>
 				</div>
 			</div>
@@ -95,9 +94,22 @@
 		}
 		function updateView(item, lang)
 		{
+			document.querySelector('div#Title > p').innerHTML = item.Detail[lang].Title
 			document.querySelector('div#description > p').innerHTML = item.Detail[lang].BaseText
-			document.querySelector('div.informationInstance > p').innerHTML = item.PoiType
-			document.querySelector('div.informationInstance span').innerHTML = item.LocationInfo.TvInfo.Name[lang]
+			document.querySelector('span#category').innerHTML = item.PoiType
+			document.querySelector('span#ageFrom').innerHTML = item.AgeFrom
+			document.querySelector('span#ageTo').innerHTML = item.AgeTo
+			document.querySelector('span#altitudeDifference').innerHTML = item.AltitudeDifference //oppure AltitudeSumUp?
+			document.querySelector('span#altitudeLowestPoint').innerHTML = item.AltitudeLowestPoint
+			document.querySelector('span#altitudeHighestPoint').innerHTML = item.AltitudeHighestPoint
+			document.querySelector('span#location').innerHTML = item.LocationInfo.TvInfo.Name[lang]
+			//image gallery -> item.ImageGallery --- How to add a Gallery
+			document.querySelector('span#companyName').innerHTML = item.ContactInfos[lang].CompanyName
+			document.querySelector('span#address').innerHTML = item.ContactInfos[lang].Address
+			document.querySelector('span#city').innerHTML = item.ContactInfos[lang].City
+			document.querySelector('span#country').innerHTML = item.ContactInfos[lang].CountryName
+			document.querySelector('span#email').innerHTML = item.ContactInfos[lang].Email
+			document.querySelector('span#phoneNumber').innerHTML = item.ContactInfos[lang].Phonenumber
 			// ...
 		}
 		main()
