--- a/ScratchComponents/categories.html
+++ b/ScratchComponents/categories.html
@@ -17,7 +17,7 @@
 						>
 					</div>
 					<div class="subCategory" id="subCategoryKultur">
-						<p>Culture and Attractions</p>
+						<p style="color: #FB8464;">Culture and Attractions</p>
 						<input type="checkbox" id="museums" name="museums" value="museums">
 						<label for="museums">Museums</label><br>
 						<input type="checkbox" id="nature_park" name="nature_park" value="nature_park">
@@ -42,7 +42,13 @@
 							alt="Entspannung"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryEntspannung">hei</div>
+					<div class="subCategory" id="subCategoryEntspannung">
+						<p style="color: #EBE38C;">Wellness and Relaxation</p>
+						<input type="checkbox" id="wellness" name="wellness" value="wellness">
+						<label for="wellness">Wellness Treatments</label><br>
+						<input type="checkbox" id="spa" name="spa" value="spa">
+						<label for="spa">Spa and Water Worlds</label><br>
+					</div>
 				</div>
 				<div class="dropdownCategory">
 					<div class="category">
@@ -52,7 +58,11 @@
 							alt="Essen"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryEssen">hei</div>
+					<div class="subCategory" id="subCategoryEssen">
+						<p style="color: #7fCC86;">Eating and Drinking</p>
+						<input type="checkbox" id="wine" name="wine" value="wine">
+						<label for="wine">Wineries</label><br>
+					</div>
 				</div>
 				<div class="dropdownCategory">
 					<div class="category">
@@ -62,7 +72,9 @@
 							alt="Geschaefte"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryGeschaefte">hei</div>
+					<div class="subCategory" id="subCategoryGeschaefte">
+						<!-- missing title and subcategories -->
+					</div>
 				</div>
 				<div class="dropdownCategory">
 					<div class="category">
@@ -72,7 +84,9 @@
 							alt="Mobilitaet"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryMonilitaet">hei</div>
+					<div class="subCategory" id="subCategoryMonilitaet">
+						<!-- missing title and subcategories -->
+					</div>
 				</div>
 				<div class="dropdownCategory">
 					<div class="category">
@@ -82,7 +96,35 @@
 							alt="Sommer"
 						>
 					</div>
-					<div class="subCategory" id="subCategorySommer">hei</div>
+					<div class="subCategory" id="subCategorySommer">
+						<p style="color: #3DDCD4;">Summer</p>
+						<input type="checkbox" id="hiking" name="hiking" value="hiking">
+						<label for="hiking">Hiking</label><br>
+						<input type="checkbox" id="mountaineering" name="mountaineering" value="mountaineering">
+						<label for="mountaineering">Mountaineering</label><br>
+						<input type="checkbox" id="climbing" name="climbing" value="climbing">
+						<label for="climbing">Climbing</label><br>
+						<input type="checkbox" id="bike" name="bike" value="bike">
+						<label for="bike">Biking and Biking Tours</label><br>
+						<input type="checkbox" id="bike_rentals" name="bike_rentals" value="bike_rentals">
+						<label for="bike_rentals">Bike Rental</label><br>
+						<input type="checkbox" id="lakes_pools" name="lakes_pools" value="lakes_pools">
+						<label for="lakes_pools">Bathing Lakes and Outdoor Pools</label><br>
+						<input type="checkbox" id="water_sports" name="water_sports" value="water_sports">
+						<label for="water_sports">Water Sports</label><br>
+						<input type="checkbox" id="horse" name="horse" value="horse">
+						<label for="horse">Horseback Riding</label><br>
+						<input type="checkbox" id="leisure_experience" name="leisure_experience" value="leisure_experience">
+						<label for="leisure_experience">Leisure and Experience</label><br>
+						<input type="checkbox" id="fitness" name="fitness" value="fitness">
+						<label for="fitness">Running and Fitness</label><br>
+						<input type="checkbox" id="golf" name="golf" value="golf">
+						<label for="golf">Golf</label><br>
+						<input type="checkbox" id="paragliding" name="paragliding" value="paragliding">
+						<label for="paragliding">Paragliding</label><br>
+						<input type="checkbox" id="fishing" name="fishing" value="fishing">
+						<label for="fishing">Angling and Fishing</label><br>
+					</div>
 				</div>
 				<div class="dropdownCategory">
 					<div class="category">
@@ -92,7 +134,35 @@
 							alt="Winter"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryWinter">hei</div>
+					<div class="subCategory" id="subCategoryWinter">
+						<p style="color: #3D8CC4;">Winter</p>
+						<input type="checkbox" id="ski_areas" name="ski_areas" value="ski_areas">
+						<label for="ski_areas">Ski Areas</label><br>
+						<input type="checkbox" id="marked_slopes" name="marked_slopes" value="marked_slopes">
+						<label for="marked_slopes">Marked Ski Paths and Slopes</label><br>
+						<input type="checkbox" id="snow_parks" name="snow_parks" value="snow_parks">
+						<label for="snow_parks">Snow Parks</label><br>
+						<input type="checkbox" id="ski_schools_rental" name="ski_schools_rental" value="ski_schools_rental">
+						<label for="ski_schools_rental">Ski Schools and Ski Rental</label><br>
+						<input type="checkbox" id="ski_tours" name="ski_tours" value="ski_tours">
+						<label for="ski_tours">Ski Tours</label><br>
+						<input type="checkbox" id="snowshoe" name="snowshoe" value="snowshoe">
+						<label for="snowshoe">Snowshow Hikes</label><br>
+						<input type="checkbox" id="winter_hiking" name="winter_hiking" value="winter_hiking">
+						<label for="winter_hiking">Winter Hiking</label><br>
+						<input type="checkbox" id="sledging" name="sledging" value="sledging">
+						<label for="sledging">Sledging</label><br>
+						<input type="checkbox" id="ice_skating" name="ice_skating" value="ice_skating">
+						<label for="ice_skating">Ice Skating</label><br>
+						<input type="checkbox" id="horse_sleigh_rides" name="horse_sleigh_rides" value="horse_sleigh_rides">
+						<label for="horse_sleigh_rides">Horse-Drawn Sleigh Rides</label><br>
+						<input type="checkbox" id="ice_climbing" name="ice_climbing" value="ice_climbing">
+						<label for="ice_climbing">Ice Climbing</label><br>
+						<input type="checkbox" id="christmas" name="christmas" value="christmas">
+						<label for="christmas">Christmas and Christmas Markets</label><br>
+						<input type="checkbox" id="cross_country_skiing" name="cross_country_skiing" value="cross_country_skiing">
+						<label for="cross_country_skiing">Cross-country Skiing</label><br>
+					</div>
 				</div>
 				<div class="dropdownCategory">
 					<div class="category">
@@ -102,7 +172,23 @@
 							alt="Anderes"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryAnderes">hei</div>
+					<div class="subCategory" id="subCategoryAnderes">
+						<p style="color: #6554B7;">Other</p>
+						<input type="checkbox" id="klettertour" name="klettertour" value="klettertour">
+						<label for="klettertour">Klettertour</label><br>
+						<input type="checkbox" id="family_holidays" name="family_holidays" value="family_holidays">
+						<label for="family_holidays">Family Holidays</label><br>
+						<input type="checkbox" id="legends" name="legends" value="legends">
+						<label for="legends">Legends</label><br>
+						<input type="checkbox" id="allergy_free_holiday" name="allergy_free_holiday" value="allergy_free_holiday">
+						<label for="allergy_free_holiday">Allergy-Free Holiday</label><br>
+						<input type="checkbox" id="stadtrundgang" name="stadtrundgang" value="stadtrundgang">
+						<label for="stadtrundgang">Stadtrundgang</label><br>
+						<input type="checkbox" id="lift" name="lift" value="lift">
+						<label for="lift">Lift</label><br>
+						<input type="checkbox" id="without_assignment" name="without_assignment" value="without_assignment">
+						<label for="without_assignment">Without assignment</label><br>
+					</div>
 				</div>
 			</div>
 		</div>
