--- a/ScratchComponents/categories.html
+++ b/ScratchComponents/categories.html
@@ -16,7 +16,7 @@
 							alt="Kultur"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryKultur">
+					<div class="subCategory subCategoryLeft" id="subCategoryKultur">
 						<p style="color: #FB8464;">Culture and Attractions</p>
 						<input type="checkbox" id="museums" name="museums" value="museums">
 						<label for="museums">Museums</label><br>
@@ -42,7 +42,7 @@
 							alt="Entspannung"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryEntspannung">
+					<div class="subCategory subCategoryLeft" id="subCategoryEntspannung">
 						<p style="color: #EBE38C;">Wellness and Relaxation</p>
 						<input type="checkbox" id="wellness" name="wellness" value="wellness">
 						<label for="wellness">Wellness Treatments</label><br>
@@ -58,7 +58,7 @@
 							alt="Essen"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryEssen">
+					<div class="subCategory subCategoryLeft" id="subCategoryEssen">
 						<p style="color: #7fCC86;">Eating and Drinking</p>
 						<input type="checkbox" id="wine" name="wine" value="wine">
 						<label for="wine">Wineries</label><br>
@@ -72,7 +72,7 @@
 							alt="Geschaefte"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryGeschaefte">
+					<div class="subCategory subCategoryLeft" id="subCategoryGeschaefte">
 						<!-- missing title and subcategories -->
 					</div>
 				</div>
@@ -84,7 +84,7 @@
 							alt="Mobilitaet"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryMonilitaet">
+					<div class="subCategory subCategoryRight" id="subCategoryMonilitaet">
 						<!-- missing title and subcategories -->
 					</div>
 				</div>
@@ -96,7 +96,7 @@
 							alt="Sommer"
 						>
 					</div>
-					<div class="subCategory" id="subCategorySommer">
+					<div class="subCategory subCategoryRight" id="subCategorySommer">
 						<p style="color: #3DDCD4;">Summer</p>
 						<input type="checkbox" id="hiking" name="hiking" value="hiking">
 						<label for="hiking">Hiking</label><br>
@@ -134,7 +134,7 @@
 							alt="Winter"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryWinter">
+					<div class="subCategory subCategoryRight" id="subCategoryWinter">
 						<p style="color: #3D8CC4;">Winter</p>
 						<input type="checkbox" id="ski_areas" name="ski_areas" value="ski_areas">
 						<label for="ski_areas">Ski Areas</label><br>
@@ -172,7 +172,7 @@
 							alt="Anderes"
 						>
 					</div>
-					<div class="subCategory" id="subCategoryAnderes">
+					<div class="subCategory subCategoryRight" id="subCategoryAnderes">
 						<p style="color: #6554B7;">Other</p>
 						<input type="checkbox" id="klettertour" name="klettertour" value="klettertour">
 						<label for="klettertour">Klettertour</label><br>
