--- a/ScratchComponents/map.html
+++ b/ScratchComponents/map.html
@@ -13,17 +13,8 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"/>
 <script                 src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
+<link rel="stylesheet" type="text/css" href="static/css/design.css" />
 
-	
-<style>
-html, body {
-	height: 100%;
-	margin: 0px;
-}
-#mapid {
-	height: 100%;
-}
-</style>
 </head>
 <body>
 	<div id="mapid"></div>
