--- a/ScratchComponents/item.html
+++ b/ScratchComponents/item.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/all.css" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" type="text/css" href="css/file.css" />
+		<link rel="stylesheet" type="text/css" href="static/css/design.css" />
 	</head>
 	<body>
 		<div class="mainContainer">
