--- a/ScratchComponents/item.html
+++ b/ScratchComponents/item.html
@@ -15,7 +15,7 @@
 					<i class="fas fa-chevron-up" onclick="expand(this)"></i>
 				</div>
 			</div>
-			<div class="infoContainer">
+			<div class="resultContainer">
 				<div class="itemInfo" id="itemInformation">
 					<div class="infoTitle" id="informationTitle">
 						<p class="infoTitleParagraph"><i class="fas fa-info-circle"></i>Informations</p>
