--- a/ScratchComponents/search.html
+++ b/ScratchComponents/search.html
@@ -15,7 +15,7 @@
 					<i class="fas fa-chevron-up" onclick="expand(this)"></i>
 				</div>
 			</div>
-			<div class="infoContainer">
+			<div class="resultContainer">
 				<div class="searchInstance">
 					<div class="searchInstanceParagraph">
 						<p class="text"><b>Museum name</b><br />Museum category</p>
