--- a/ScratchComponents/map.html
+++ b/ScratchComponents/map.html
@@ -13,8 +13,9 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"/>
 <script                 src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
-<link rel="stylesheet" type="text/css" href="static/css/design.css" />
-
+<link rel="stylesheet" type="text/css" href="static/css/components/map.css" />
+<link rel="stylesheet" type="text/css" href="static/css/theme.css" />
+<link rel="stylesheet" type="text/css" href="static/css/atoms.css" />
 </head>
 <body>
 	<div id="mapid"></div>
