classList add type

--- a/ScratchComponents/item.html
+++ b/ScratchComponents/item.html
@@ -125,6 +125,8 @@
 			var lenfas =  fas.length;
 			var titlePar = document.getElementsByClassName("titleParagraph");
 
+			// document.querySelector('div.mainComponent').classList.add(item.Type)
+			
 			switch(item.Type) {
 				case "Anderes":
 					for(var i=0 ; i<lenfas; i++){
