--- a/ScratchComponents/item.html
+++ b/ScratchComponents/item.html
@@ -121,61 +121,7 @@
 			// ...
 			
 			//update colour of icons and title
-			var fas = document.getElementsByClassName("fas");
-			var lenfas =  fas.length;
-			var titlePar = document.getElementsByClassName("titleParagraph");
-
-			// document.querySelector('div.mainComponent').classList.add(item.Type)
-			
-			switch(item.Type) {
-				case "Anderes":
-					for(var i=0 ; i<lenfas; i++){
-					   fas[i].style.color="#6554B7";
-					}
-					titlePar[0].style.color="#6554B7";
-					break;
-				case "Essen Trinken":
-					for(var i=0 ; i<lenfas; i++){
-					   fas[i].style.color="#7fCC86";
-					}
-					titlePar[0].style.color="#7fCC86";
-					break;
-				case "Geschäfte und Dienstleister":
-					for(var i=0 ; i<lenfas; i++){
-					   fas[i].style.color="#E37454";
-					}
-					titlePar[0].style.color="#E37454";
-					break;
-				case "Kultur Sehenswürdigkeiten":
-					for(var i=0 ; i<lenfas; i++){
-					   fas[i].style.color="#FB8464";
-					}
-					titlePar[0].style.color="#FB8464";
-					break;
-				case "Mobilität":
-					for(var i=0 ; i<lenfas; i++){
-					   fas[i].style.color="#846CEC";
-					}
-					titlePar[0].style.color="#846CEC";
-					break;
-				case "Sommer":
-					for(var i=0 ; i<lenfas; i++){
-					   fas[i].style.color="#3DDCD4";
-					}
-					titlePar[0].style.color="#3DDCD4";
-					break;
-				case "Wellness Entspannung":
-					for(var i=0 ; i<lenfas; i++){
-					   fas[i].style.color="#EBE38C";
-					}
-					titlePar[0].style.color="#EBE38C";
-					break;
-				case "Winter":
-					for(var i=0 ; i<lenfas; i++){
-					   fas[i].style.color="#3D8CC4";
-					}
-					titlePar[0].style.color="#3D8CC4";
-			}
+			document.querySelector('div.mainContainer').classList.add(item.Type.replace(/ .*/,''));
 		}
 		main()
 	</script>
