--- a/ComponentStructure/index.html
+++ b/ComponentStructure/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    
+    
+<!-- Make sure you put this AFTER Leaflet's CSS -->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+	integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+	crossorigin=""></script>
+	
+<!-- Clustering plugin -->	
+<script                 src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster-src.js"></script>
+
+
 </head>
 <body>
 	<div id="webcomponentsContainer">
@@ -20,7 +31,6 @@
 		</div>
 	</div>
 
-
 <script src="InteractiveMap.js"></script>
 <script src="CategoriesChoice.js"></script>
 <script src="ItemVisualizer.js"></script>
@@ -32,32 +42,37 @@
 	html, body, #webcomponentsContainer {
 		height: 100%;
 		margin: 0px;
-		padding; 0px;
-		overflow: hidden;
+		padding: 0px;
+	}
+	
+	interactive-map {
+		height: 100%;
 	}
 	
 	#mapContainer {
 		width: 100%;
 		height: 100%;
-		overflow: hidden;
 	}
 	
 	#categoriesContainer {
 		position: absolute;
 		top: 0;
 		left: 50%;
+		z-index: 999;
 	}
 	
 	#itemContainer {
 		position: absolute;
 		top: 0;
-		left: 0;
+		right: 0;
+		z-index: 999;
 	}
 	
 	#searchContainer {
 		position: absolute;
 		top: 0;
 		left: 0;
+		z-index: 999;
 	}
 </style>
 
