--- a/ComponentStructure/index.html
+++ b/ComponentStructure/index.html
@@ -32,7 +32,7 @@
 	html, body, #webcomponentsContainer {
 		height: 100%;
 		margin: 0px;
-		padding; 0px;
+		padding: 0px;
 		overflow: hidden;
 	}
 	
