Inserted Categories scratch in component, but JSON error

--- a/ScratchComponents/categories.html
+++ b/ScratchComponents/categories.html
@@ -52,8 +52,8 @@
 					if (type.Type != 'Type')
 						continue;
 					
-					// console.log(type.Key)
-					// console.log(type.TypeDesc[lang])
+					console.log(type.TypeDesc[lang]);
+
 					
 					let category = category_template.cloneNode(true)
 					category.querySelector('div.subCategory > p').textContent = type.TypeDesc[lang]
