--- a/ActivityPOIComponent.html
+++ b/ActivityPOIComponent.html
@@ -17,8 +17,9 @@
 <body>
 <activity-poi 
     lat-lon-zoom="[46.6,11.4,12]" 
-    radius="10000" 
-    lang="it" 
+    radius="10000"
+    showradius="true" 
+    lang="de" 
     xcategory-filter="sommer/*,winter/skirundtouren pisten"
     ></activity-poi>
 
