added svg icons instead of fa icons

--- a/ActivityPOIComponent.html
+++ b/ActivityPOIComponent.html
@@ -15,11 +15,11 @@
     </style>
 </head>
 <body>
-<activity-poi 
-    lat-lon-zoom="[46.6,11.4,12]" 
+<activity-poi
+    lat-lon-zoom="[46.6,11.4,12]"
     radius="10000"
-    showradius="true" 
-    lang="de" 
+    showradius="true"
+    lang="de"
     xcategory-filter="sommer/*,winter/skirundtouren pisten"
     ></activity-poi>
 
@@ -30,11 +30,13 @@
         img: "./src/static/img/",
         img_category_icons: "./src/static/img/category_icons/",
         img_map_markers: "./src/static/img/map_markers/",
+        img_fa_icons: "./src/static/img/fa_icons/",
         data:"./src/static/data/"
     };
 </script>
 
 <script src="src/strings.js"></script>
+<script src="src/static/scripts/svg-inject.min.js"></script>
 
 <script src="src/InteractiveMapComponent.js"></script>
 <script src="src/CategoriesChoiceComponent.js"></script>
