Use odh-activity-poi as web component tag

--- a/ActivityPOIComponent.html
+++ b/ActivityPOIComponent.html
@@ -15,13 +15,13 @@
     </style>
 </head>
 <body>
-<activity-poi
+<odh-activity-poi
     lat-lon-zoom="[46.6,11.4,12]"
     radius="10000"
     showradius="true"
     lang="de"
     xcategory-filter="sommer/*,winter/skirundtouren pisten"
-    ></activity-poi>
+    ></odh-activity-poi>
 
 <script>
     window.paths = {
